--- a/portfolio/scss/_medium.scss
+++ b/portfolio/scss/_medium.scss
@@ -4,7 +4,6 @@
 nav {
     height: auto;
     padding: 1rem;
-    width: 100%;
 
     ul {
         justify-content: center;
